--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 
 <meta name="viewport" content="width=device-width">
-
+<meta charset="UTF-8">
 
 <link href="css/demo.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script	type="text/javascript" src="js/lockednav.js"></script>
@@ -32,9 +33,7 @@ $(document).ready( function() {
     $('.photoSlider').slick({
         slide: 'li',
         arrows: false,
-        dots: true,
         infinite: true,
-        centerMode: true,
         speed: 500,
         fade: true,
         cssEase: 'linear',
@@ -84,7 +83,7 @@ $(document).ready( function() {
             <p>Joseph Ambler Inn</p>
             <p>1005 Horsham Road</p>
             <p>North Wales, PA 19454</p>
-            <a href="https://www.google.com/maps/place/Joseph+Ambler+Inn/@40.2383743,-75.229704,17z/data=!4m15!1m9!4m8!1m0!1m6!1m2!1s0x89c6a4177d39cd4b:0x34a00137a47c144b!2sJoseph+Ambler+Inn,+1005+Horsham+Rd,+North+Wales,+PA+19454!2m2!1d-75.22751!2d40.2383702!3m4!1s0x89c6a4177d39cd4b:0x34a00137a47c144b!8m2!3d40.2383702!4d-75.22751">View map</a>
+            <p><a href="https://www.google.com/maps/place/Joseph+Ambler+Inn/@40.2383743,-75.229704,17z/data=!4m15!1m9!4m8!1m0!1m6!1m2!1s0x89c6a4177d39cd4b:0x34a00137a47c144b!2sJoseph+Ambler+Inn,+1005+Horsham+Rd,+North+Wales,+PA+19454!2m2!1d-75.22751!2d40.2383702!3m4!1s0x89c6a4177d39cd4b:0x34a00137a47c144b!8m2!3d40.2383702!4d-75.22751">View map</a></p>
             <p>Reception to immediately follow</p>
 		</div>
 	</div>
@@ -93,13 +92,55 @@ $(document).ready( function() {
 		<div class="inner">
 			<h1>Accommodations</h1>
             <p>A block of rooms has been made available at the Joseph Ambler Inn</p>
-            <p>Do something to reserve one</p>
+            <p>Stay tuned for more information about booking!</p>
+            <div class="img_block">
+                    <img src="img/jai_room1.jpg"/>
+                    <img src="img/jai_room2.jpg"/>
+                    <img src="img/jai_room3.jpg"/>
+            </div>
 		</div>
 	</div>
 
     <div id="bridalparty" class="section">
         <div class="inner">
             <h1>Bridal Party</h1>
+            <div class="bp_block">
+                    <div class="bp_image">
+                        <img src="img/melissa.jpg"/>
+                        <p>Melissa Cohen
+                    </div>
+                    <div class="bp_image">
+                        <img src="img/emily.jpg"/>
+                        <p>Emily Green
+                    </div>
+                    <div class="bp_image">
+                        <img src="img/aimee.jpg"/>
+                        <p>Aimee Goldstein
+                    </div>
+                    <div class="bp_image">
+                        <img src="img/molly.jpg"/>
+                        <p>Molly Kuzan
+                    </div>
+            </div>
+            <p/>
+            <div class="bp_block">
+                    <div class="bp_image">
+                        <img src="img/matt.jpg"/>
+                        <p>Matt Segall
+                    </div>
+                    <div class="bp_image">
+                        <img src="img/obie.jpg"/>
+                        <p>Obie O'Brien
+                    </div>
+                    <div class="bp_image">
+                        <img src="img/andrew.jpg"/>
+                        <p>Andrew Perelman
+                    </div>
+                    <div class="bp_image">
+                        <img src="img/hackman.jpg"/>
+                        <p>Andrew Hackman
+                    </div>
+            </div>
         </div>
     </div>
 
@@ -109,8 +150,8 @@ $(document).ready( function() {
             <p>We are registered at the following places:</p>
             <div class="reg-links">
                 <a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=544023206&eventType=Wedding&pwsurl="><img src="img/bbb-logo.png"/></a>
-                <a href="https://www.macys.com/wgl/registry/guest/6694380"><img src="img/macys-logo.png"/></a>
                 <a href="https://www.wanderable.com/hm/BethandJeff102217"><img src="img/wanderable-logo.png"/></a>
+                <a href="https://www.macys.com/wgl/registry/guest/6694380"><img src="img/macys-logo.png"/></a>
             </div>
 		</div>
 	</div>
